package com.gameabc.bfc.model.bto;
import "ParamVO.proto";
option java_package = "com.gameabc.bfc.model.bto";
option java_outer_classname = "MessageProto";
message MessageVO  {
  optional int32 action = 1;
  optional int32 phase = 2;
  optional ParamVO data = 3;
  optional int64 sendAt = 4;
  optional int64 futureId = 5;
  optional string clientNumId = 6;
  optional string name= 7;
  optional int32 errorCode = 8;
  optional bool isEncrypt = 9;
  optional string token = 10;
  optional int32 seqNum = 11;//
}

message ParamVO  {
  repeated string strValues = 1;
  repeated int32 intValues = 2;
  repeated int64 longValues = 3;
  repeated bytes data = 4;
}